# GlowML

./: CMakeLists.txt  README.md
include/: GlowML.h  converter.h  fileio.h  parser.h
src/: fileio.cpp  main.cpp  parser.cpp
